# yew-i18n

./: Cargo.toml  LICENSE  README.md  YEW.md
.github/workflows/: rust.yml
examples/tailwind/: index.html
examples/yew/: Cargo.toml  LICENSE  README.md  index.html
examples/yew/i18n/en/: base.json
examples/yew/i18n/es/: base.json
examples/yew/i18n/fr/: base.json
examples/yew/src/: main.rs
examples/yew/src/components/: landing.rs
examples/yew/src/pages/: landing.rs
src/: config.rs  lib.rs  yew.rs
