[package]
name = "yew-i18n-example"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18nrs = { path = "../../", features = ["yew"] }
serde_json = { version = "1.0.104", default-features = false }
web-sys = { version = "0.3.64", default-features = false }
yew = { version = "0.21.0", features = ["csr"], default-features = false }
yew-router = { version = "0.18.0", default-features = false }
log = "0.4.22"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
